--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <title>Ai2018Progetto</title>
   <base href="/">
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <!-- <link href="node_modules/ng2-toastr/bundles/ng2-toastr.min.css" rel="stylesheet" />
+  <script src="node_modules/ng2-toastr/bundles/ng2-toastr.min.js"></script> -->
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
